2008-02-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/bzlib.vapi: add bzip2 binding, patch by Maciej Piechotka
	* vapi/Makefile.am: add bzip2

2008-02-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* doc/vala/interfaces.xml: add some interface documentation,
	  patch by Johannes Schmid

2008-02-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vapi/packages/pango/: fix Layout.get_size binding,
	  fixes bug 518143
	* vapi/pango.vapi: regenerated

2008-02-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* compiler/valacompiler.vala: be quiet on zero errors and zero,
	  fixes bug 516925

2008-02-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* gobject/valaccodegenerator.vala: fix array lengths with static
	  fields, fixes bug 515211

2008-02-24  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaclass.vala, vala/valainterface.vala:
	  support inner delegates

2008-02-23  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaclass.vala, vala/valainterface.vala:
	  support inner enums, support inner types in interfaces,
	  fixes bug 518258

2008-02-23  Jürg Billeter  <j@bitron.ch>

	* vapi/gconf-2.0.vapi, vapi/gdk-2.0.vapi, vapi/gdk-pixbuf-2.0.vapi,
	  vapi/gio-2.0.vapi, vapi/gnet-2.0.vapi, vapi/gnome-vfs-2.0.vapi,
	  vapi/gstreamer-0.10.vapi, vapi/gstreamer-audio-0.10.vapi,
	  vapi/gstreamer-base-0.10.vapi, vapi/gstreamer-pbutils-0.10.vapi,
	  vapi/gtk+-2.0.vapi, vapi/libglade-2.0.vapi, vapi/libgnome-menu.vapi,
	  vapi/libgnomeui-2.0.vapi, vapi/libnotify.vap, vapi/libsoup-2.2.vapi,
	  vapi/libsoup-2.4.vapi, vapi/poppler-glib.vapi: regenerated

2008-02-23  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: fix support for instance delegates

	* vapigen/valagidlparser.vala: support instance delegates in
	  bindings generator

2008-02-23  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valaerrortype.vala: fix typo

2008-02-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaformalparameter.vala,
	  gobject/valaccodeassignmentbinding.vala,